[package]
name = "dcpu16-gui"
version = "0.0.3"
authors = ["Gustav Larsson <gustav.m.larsson@gmail.com>"]
description = "DCPU-16 emulator GUI"
repository = "https://github.com/gustavla/dcpu16-gui"
readme = "README.md"
keywords = ["dcpu16", "gui", "cpu", "emulator", "simulator"]
license = "MIT"

[dependencies]
image = "0.3.11"
piston = "0.4.1"
piston2d-graphics = "0.4.1"
pistoncore-glutin_window = "0.6.0"
piston2d-opengl_graphics = "0.6.0"
gl = "0.0.12"
libc = "0.1.8"
getopts = "0.2.11"
dcpu16 = "0.0.6"
